--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "belajar_react",
   "version": "0.1.0",
-  "homepage": "https://github.com/Rezacrown/trustme.io",
+  "homepage": "https://github.com/Rezacrown/topupgame.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
